force-app/main/default/objects/Plant_Location__c/Plant_Location__c.object-meta.xml
<CustomObject>
    <label>Plant Location</label>
    <nameField>
        <label>Plant Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>