force-app/main/default/objects/Plant_Location__c/fields/Capital_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Capital_Improvement__c</fullName>
    <inlineHelpText>Please include a Date when updating this field with new information on Plant capital improvements.</inlineHelpText>
    <label>Capital Improvement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>