force-app/main/default/objects/Plant_Location__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plant Locations</relationshipLabel>
    <relationshipName>Plant_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>