force-app/main/default/objects/Plant_Location__c/fields/Grind__c.field-meta.xml
<CustomField>
    <fullName>Grind__c</fullName>
    <description>US50</description>
    <label>Grind</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>