force-app/main/default/objects/Plant_Location__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <description>US50</description>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kilogram</fullName>
            </value>
            <value>
                <fullName>Ton</fullName>
            </value>
            <value>
                <fullName>Pounds</fullName>
            </value>
            <value>
                <fullName>Gallons</fullName>
            </value>
            <value>
                <fullName>Liters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>